--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 
 <head>
 	<meta charset="utf-8">
-
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Sprint Challenge - Home</title>
+	<link rel="stylesheet" href="css/index.css"/>
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/5b12ffad4b.js" crossorigin="anonymous"></script>
@@ -15,15 +16,23 @@
 	<div>
 		<!-- header -->
 		<header>
-			<div>
-				BLOOMTECH BAR AND GRILL
+				<a href="index.html"></a>
+				<h1>BLOOMTECH BAR AND GRILL</h1>
 
-				<!-- nav -->
-				Menu
-				Reservations
-				Special Offers
-				Contact
-			</div>
+			<!-- nav -->
+			<nav>
+		<div class="header links">
+				<a href="menu.html">Menu</a>
+				<a href="#Reservations">Reservations</a>
+				<a href="#Special Offers">Special Offers</a>
+				<a href="#Contact">Contact</a>
+				</div>
+			<buttons><a href="#"><i class="fa-brands fa-facebook-square"></i></a></buttons>
+			<buttons><a href="#"><i class="fa-brands fa-twitter-square"></i></a></buttons>
+			<buttons><a href="#"><i class="fa-brands fa-instagram-square"></i></a></buttons>
+				</nav>
+	</div>
+		
 		</header>
 
 		<!-- gallery section -->
@@ -31,23 +40,23 @@
 			<div>
 				<h2>OUR FOOD</h2>
 
-				img/food-avocadotoast.jpg
+				<img src = "img/food-avocadotoast.jpg">
 
-				img/food-burger.jpg
+				<img src = "img/food-burger.jpg">
 
-				img/food-poutine.jpg
+				<img src = "img/food-poutine.jpg">
 
-				img/food-ribs.jpg
+				<img src = "img/food-ribs.jpg">
 
-				img/food-sandwich.jpg
+				<img src = "img/food-sandwich.jpg">
 
-				img/food-sausage.jpg
+				<img src = "img/food-sausage.jpg">
 
-				img/food-steak.jpg
+				<img src = "img/food-steak.jpg">
 
-				img/food-tacos.jpg
+				<img src = "img/food-tacos.jpg">
 
-				img/food-wings.jpg
+				<img src = "img/food-wings.jpg">
 			</div>
 		</section>
 
@@ -111,8 +120,8 @@
 						<h3>Contacts</h3>
 
 						<div>
-							<a id="phone" href="tel:999-999-9999">999-999-9999</a>
-							<a id="email" href="mailto:restaurant@bloomtech.com">restaurant@bloomtech.com</a>
+							<p><a id="phone" href="tel:999-999-9999">999-999-9999</a></p>
+							<p><a id="email" href="mailto:restaurant@bloomtech.com">restaurant@bloomtech.com</a></p>
 						</div>
 					</div>
 				</div>
@@ -125,15 +134,21 @@
 		<!-- footer -->
 		<footer>
 			<!-- email signup -->
-			Join our mailing list!
-			Sign Up
+			<div class="email-container">
+			<p>Join our mailing list!</p>
+			<p><input type="email" id="myEmail" placeholder="Email Address"> <button onClick="myFunction()">Sign Up</button></p>
+
+		</div>
+		
 			<!-- nav -->
-			Menu
-			Reservations
-			Special Offers
-			Contact
+			<nav>
+				<a href = "#menu.html">Menu</a>
+				<a href = "#Reservations">Reservations</a>
+				<a href = "#Special Offers">Special Offers</a>
+				<a href = "#Contact">Contact</a>
+			</nav>
 			<!-- copyright -->
-			©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.
+			<p>©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.</p>
 		</footer>
 	</div>
 </body>
